--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,1 @@
-spring.jpa.hibernate.ddl-auto=create
-spring.h2.console.enable=true
-spring.h2.console.path=/h2-console
-
-spring.datasource.url=jdbc:h2:~/test
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-
-spring.jpa.show-sql=true
-spring.jpa-properties.hibernate.format_sql=true
+spring.profiles.activate=prod
